// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PlanPicker
  input={
    Object {
      "onChange": [Function],
    }
  }
  plans={
    Array [
      Object {
        "code": "1",
        "includesIp": true,
        "monthly": 100,
        "name": "One",
        "overage": 0.1,
        "volume": 1,
      },
      Object {
        "code": "2",
        "includesIp": false,
        "isFree": true,
        "monthly": 0,
        "name": "Two",
        "overage": 0.2,
        "volume": 2,
      },
      Object {
        "code": "3",
        "monthly": 300,
        "name": "Three",
        "overage": 0.3,
        "volume": 3,
      },
    ]
  }
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultInputValue=""
    defaultIsOpen={false}
    defaultSelectedItem={
      Object {
        "code": "1",
        "includesIp": true,
        "monthly": 100,
        "name": "One",
        "overage": 0.1,
        "volume": 1,
      }
    }
    getA11yStatusMessage={[Function]}
    id="downshift-1"
    itemToString={[Function]}
    onChange={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
  >
    <div>
      <div
        className=""
      >
        <Plan
          className=""
          id="downshift-1-item-0"
          onClick={[Function]}
          onMouseEnter={[Function]}
          plan={
            Object {
              "code": "1",
              "includesIp": true,
              "monthly": 100,
              "name": "One",
              "overage": 0.1,
              "volume": 1,
            }
          }
        >
          <a
            className=""
            id="downshift-1-item-0"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              <strong>
                1
              </strong>
               emails for 
              <span>
                <strong>
                  $
                  100
                </strong>
                /mo
              </span>
            </span>
            <span>
              $0.10/ thousand extra emails
              , first dedicated IP address is free
            </span>
          </a>
        </Plan>
        <Plan
          className=""
          id="downshift-1-item-1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          plan={
            Object {
              "code": "2",
              "includesIp": false,
              "isFree": true,
              "monthly": 0,
              "name": "Two",
              "overage": 0.2,
              "volume": 2,
            }
          }
        >
          <a
            className=""
            id="downshift-1-item-1"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              <strong>
                2
              </strong>
               emails for 
              <strong>
                Free
              </strong>
            </span>
            <span>
              Full-featured developer account
            </span>
          </a>
        </Plan>
        <Plan
          className=""
          id="downshift-1-item-2"
          onClick={[Function]}
          onMouseEnter={[Function]}
          plan={
            Object {
              "code": "3",
              "monthly": 300,
              "name": "Three",
              "overage": 0.3,
              "volume": 3,
            }
          }
        >
          <a
            className=""
            id="downshift-1-item-2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              <strong>
                3
              </strong>
               emails for 
              <span>
                <strong>
                  $
                  300
                </strong>
                /mo
              </span>
            </span>
            <span>
              $0.30/ thousand extra emails
            </span>
          </a>
        </Plan>
      </div>
      <t
        name="ChevronDown"
        size={24}
      >
        <MdExpandMore
          size={24}
        >
          <IconBase
            size={24}
            viewBox="0 0 40 40"
          >
            <svg
              fill="currentColor"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width={24}
            >
              <g>
                <path
                  d="m27.7 14.3l2.3 2.3-10 10-10-10 2.3-2.3 7.7 7.7z"
                />
              </g>
            </svg>
          </IconBase>
        </MdExpandMore>
      </t>
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        id="downshift-input-2"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        role="combobox"
        value="[object Object]"
      />
      <Plan
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="open menu"
        className=""
        onClick={[Function]}
        onKeyDown={[Function]}
        plan={
          Object {
            "code": "1",
            "includesIp": true,
            "monthly": 100,
            "name": "One",
            "overage": 0.1,
            "volume": 1,
          }
        }
        role="button"
      >
        <a
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="open menu"
          className=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <span>
            <strong>
              1
            </strong>
             emails for 
            <span>
              <strong>
                $
                100
              </strong>
              /mo
            </span>
          </span>
          <span>
            $0.10/ thousand extra emails
            , first dedicated IP address is free
          </span>
        </a>
      </Plan>
    </div>
  </Downshift>
</PlanPicker>
`;

exports[`renders correctly with an initial value 1`] = `
<PlanPicker
  input={
    Object {
      "onChange": [Function],
      "value": Object {
        "code": "4",
        "monthly": 400,
        "name": "Four",
        "overage": 0.4,
        "volume": 4,
      },
    }
  }
  plans={
    Array [
      Object {
        "code": "1",
        "includesIp": true,
        "monthly": 100,
        "name": "One",
        "overage": 0.1,
        "volume": 1,
      },
      Object {
        "code": "2",
        "includesIp": false,
        "isFree": true,
        "monthly": 0,
        "name": "Two",
        "overage": 0.2,
        "volume": 2,
      },
      Object {
        "code": "3",
        "monthly": 300,
        "name": "Three",
        "overage": 0.3,
        "volume": 3,
      },
    ]
  }
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultInputValue=""
    defaultIsOpen={false}
    defaultSelectedItem={
      Object {
        "code": "4",
        "monthly": 400,
        "name": "Four",
        "overage": 0.4,
        "volume": 4,
      }
    }
    getA11yStatusMessage={[Function]}
    id="downshift-1"
    itemToString={[Function]}
    onChange={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
  >
    <div>
      <div
        className=""
      >
        <Plan
          className=""
          id="downshift-1-item-0"
          onClick={[Function]}
          onMouseEnter={[Function]}
          plan={
            Object {
              "code": "1",
              "includesIp": true,
              "monthly": 100,
              "name": "One",
              "overage": 0.1,
              "volume": 1,
            }
          }
        >
          <a
            className=""
            id="downshift-1-item-0"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              <strong>
                1
              </strong>
               emails for 
              <span>
                <strong>
                  $
                  100
                </strong>
                /mo
              </span>
            </span>
            <span>
              $0.10/ thousand extra emails
              , first dedicated IP address is free
            </span>
          </a>
        </Plan>
        <Plan
          className=""
          id="downshift-1-item-1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          plan={
            Object {
              "code": "2",
              "includesIp": false,
              "isFree": true,
              "monthly": 0,
              "name": "Two",
              "overage": 0.2,
              "volume": 2,
            }
          }
        >
          <a
            className=""
            id="downshift-1-item-1"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              <strong>
                2
              </strong>
               emails for 
              <strong>
                Free
              </strong>
            </span>
            <span>
              Full-featured developer account
            </span>
          </a>
        </Plan>
        <Plan
          className=""
          id="downshift-1-item-2"
          onClick={[Function]}
          onMouseEnter={[Function]}
          plan={
            Object {
              "code": "3",
              "monthly": 300,
              "name": "Three",
              "overage": 0.3,
              "volume": 3,
            }
          }
        >
          <a
            className=""
            id="downshift-1-item-2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              <strong>
                3
              </strong>
               emails for 
              <span>
                <strong>
                  $
                  300
                </strong>
                /mo
              </span>
            </span>
            <span>
              $0.30/ thousand extra emails
            </span>
          </a>
        </Plan>
      </div>
      <t
        name="ChevronDown"
        size={24}
      >
        <MdExpandMore
          size={24}
        >
          <IconBase
            size={24}
            viewBox="0 0 40 40"
          >
            <svg
              fill="currentColor"
              height={24}
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "color": undefined,
                  "verticalAlign": "middle",
                }
              }
              viewBox="0 0 40 40"
              width={24}
            >
              <g>
                <path
                  d="m27.7 14.3l2.3 2.3-10 10-10-10 2.3-2.3 7.7 7.7z"
                />
              </g>
            </svg>
          </IconBase>
        </MdExpandMore>
      </t>
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        id="downshift-input-3"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        role="combobox"
        value="[object Object]"
      />
      <Plan
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="open menu"
        className=""
        onClick={[Function]}
        onKeyDown={[Function]}
        plan={
          Object {
            "code": "4",
            "monthly": 400,
            "name": "Four",
            "overage": 0.4,
            "volume": 4,
          }
        }
        role="button"
      >
        <a
          aria-expanded={false}
          aria-haspopup={true}
          aria-label="open menu"
          className=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <span>
            <strong>
              4
            </strong>
             emails for 
            <span>
              <strong>
                $
                400
              </strong>
              /mo
            </span>
          </span>
          <span>
            $0.40/ thousand extra emails
          </span>
        </a>
      </Plan>
    </div>
  </Downshift>
</PlanPicker>
`;
